Update ids for clients

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ set(ENGINE_SOURCES
         engine/src/systems/MouseSystem.cpp
         engine/src/systems/InputSystem.cpp
         engine/src/systems/PhysicSystem.cpp
+        engine/src/networking/AUdpSocketIO.cpp
         )
 
 set(ENGINE_INCLUDES
@@ -62,7 +63,8 @@ set(ENGINE_INCLUDES
         engine/include/tools/Geometry.hpp
         engine/include/systems/InputSystem.hpp
         engine/include/systems/PhysicSystem.hpp
-        engine/include/entities/Drawable.hpp)
+        engine/include/entities/Drawable.hpp
+        engine/include/networking/AUdpSocketIO.hpp)
 
 set(CLIENT_SOURCES
         client/src/main.cpp
@@ -71,8 +73,7 @@ set(CLIENT_SOURCES
         client/src/sfml/WindowSFML.cpp
         client/src/sfml/SoundSFML.cpp
         client/src/sfml/EventsSFML.cpp
-        client/src/sfml/GraphicalSFML.cpp
-        )
+        client/src/sfml/GraphicalSFML.cpp)
 
 set(CLIENT_INCLUDES
         client/include/Core.hpp
@@ -95,14 +96,15 @@ set(SERVER_SOURCES
         server/client/Client.cpp
         server/lobby/lobbyManager/LobbyManager.cpp
         server/lobby/lobby/Lobby.cpp
-        server/client/TCP/TcpSocket.cpp)
+        server/client/TCP/TcpSocket.cpp
+        server/client/UDP/UdpSocketIO.cpp)
 
 set(SERVER_INCLUDES
         server/core/CoreServer.hpp
         server/client/Client.hpp
         server/lobby/lobbyManager/LobbyManager.hpp
         server/lobby/lobby/Lobby.hpp
-        server/Client/TCP/TcpSocket.hpp)
+        server/Client/TCP/TcpSocket.hpp server/client/UDP/UdpSocketIO.hpp)
 
 add_executable(r-type_client ${ENGINE_SOURCES} ${ENGINE_INCLUDES} ${CLIENT_SOURCES} ${CLIENT_INCLUDES})
 add_executable(r-type_server ${ENGINE_SOURCES} ${ENGINE_INCLUDES} ${SERVER_SOURCES} ${SERVER_INCLUDES})
@@ -113,7 +115,8 @@ target_include_directories(r-type_server PRIVATE
         server/client
         server/lobby/lobbyManager
         server/lobby/lobby
-        server/Client/TCP)
+        server/Client/TCP
+        server/Client/UDP)
 target_include_directories(r-type_client PRIVATE
         client/include
         engine/include)
