--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,7 +132,7 @@ set(CLIENT_SOURCES
         client/src/SocketParser.cpp
         client/src/systems/ClientNetworkSystem.cpp
 		client/src/sfml/SpriteSfml.cpp
-		)
+		client/src/scenes/InGame.cpp client/include/scenes/InGame.hpp client/include/NetworkAccess.hpp)
 
 set(CLIENT_INCLUDES
         client/include/Core.hpp
@@ -157,7 +157,7 @@ set(CLIENT_INCLUDES
         client/include/sfml/FontSFML.hpp
         client/include/scenes/SceneEnum.hpp
         client/include/SocketParser.hpp
-        client/include/systems/ClientNetworkSystem.hpp)
+        client/include/systems/ClientNetworkSystem.hpp client/src/scenes/InGame.cpp client/include/scenes/InGame.hpp client/include/NetworkAccess.hpp)
 
 set(SERVER_SOURCES
         server/main.cpp
