--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ set(ENGINE_SOURCES
 		engine/src/networking/ATcpSocket.cpp
 		engine/src/networking/UDP/UdpSocketInput.cpp
 		engine/src/networking/UDP/UdpSocketOutput.cpp
-		engine/src/systems/WindowResizeSystem.cpp engine/include/systems/WindowResizeSystem.hpp)
+		engine/src/systems/WindowResizeSystem.cpp)
 
 set(ENGINE_INCLUDES
 		engine/include/ecs/Entity.hpp
@@ -111,7 +111,8 @@ set(ENGINE_INCLUDES
 		engine/include/networking/AUdpSocketIO.hpp
 		engine/include/networking/UDP/UdpSocketInput.hpp
 		engine/include/networking/UDP/UdpSocketOutput.hpp
-		engine/include/systems/MoveSystem.hpp engine/src/systems/WindowResizeSystem.cpp engine/include/systems/WindowResizeSystem.hpp)
+		engine/include/systems/MoveSystem.hpp
+		engine/include/systems/WindowResizeSystem.hpp)
 
 set(CLIENT_SOURCES
 		client/src/main.cpp
