Refractor Lobby to LobbyList and create new Scene Create Lobby with a selector to choose the number max of players

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,7 +123,7 @@ set(CLIENT_SOURCES
 		client/src/main.cpp
 		client/src/Core.cpp
 		client/src/scenes/MainMenu.cpp
-		client/src/scenes/Lobby.cpp
+		client/src/scenes/LobbyList.cpp
 		client/src/sfml/WindowSFML.cpp
 		client/src/sfml/SoundSFML.cpp
 		client/src/sfml/EventsSFML.cpp
@@ -147,7 +147,7 @@ set(CLIENT_SOURCES
 set(CLIENT_INCLUDES
 		client/include/Core.hpp
 		client/include/scenes/MainMenu.hpp
-		client/include/scenes/Lobby.hpp
+		client/include/scenes/LobbyList.hpp
 		client/include/scenes/SceneType.hpp
 		client/include/sfml/GraphicalSFML.hpp
 		client/include/sfml/WindowSFML.hpp
@@ -175,7 +175,7 @@ set(CLIENT_INCLUDES
 		client/include/components/LobbyComponent.hpp
 		client/include/entities/LobbyCard.hpp
 		client/include/systems/LobbySystem.hpp
-		client/include/scenes/CreateLobby.hpp)
+		client/include/scenes/CreateLobby.hpp client/include/systems/LobbyCreateSystem.hpp client/include/components/CreateLobbyComponent.hpp client/src/systems/LobbyCreateSystem.cpp client/include/entities/CreateLobbyEntity.hpp)
 
 set(SERVER_SOURCES
         server/main.cpp
