--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -175,7 +175,7 @@ set(CLIENT_INCLUDES
 		client/include/components/LobbyComponent.hpp
 		client/include/entities/LobbyCard.hpp
 		client/include/systems/LobbySystem.hpp
-		client/include/scenes/CreateLobby.hpp client/src/scenes/LobbyWaiting.cpp client/include/scenes/LobbyWaiting.hpp client/include/entities/LobbyWaitingEntity.hpp engine/include/entities/Text.hpp)
+		client/include/scenes/CreateLobby.hpp client/src/scenes/LobbyWaiting.cpp client/include/scenes/LobbyWaiting.hpp client/include/entities/LobbyWaitingEntity.hpp engine/include/entities/Text.hpp client/include/entities/PlayerAndStarshipEntity.hpp client/include/systems/PlayerAndStarshipSystem.hpp client/src/systems/PlayerAndStarshipSystem.cpp)
 
 set(SERVER_SOURCES
         server/main.cpp
