Walking enemy randomly go backward and forward

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -322,7 +322,7 @@ set(SERVER_INCLUDES
 		server/game/entities/Sentinel.hpp
         server/game/systems/PlayerWeaponSystem.hpp
 		server/game/systems/PlayerCollisionSystem.hpp
-        )
+        server/game/GameData.hpp)
 
 
 set(ENEMIES_INCLUDES
